# ratitude

./: .gitattributes  .gitignore  .gitmodules  AGENT.md  Cargo.toml  Makefile  README.md  go.mod  go.sum  linus_review.md  linus_review_v2.md
cmd/rttd/: main.go  main_test.go  mock.go  mock_test.go
crates/rat-bridge-foxglove/: Cargo.toml
crates/rat-bridge-foxglove/src/: binding.rs  channels.rs  lib.rs  publisher.rs
crates/rat-config/: Cargo.toml
crates/rat-config/src/: compat.rs  generated.rs  lib.rs  model.rs  paths.rs  store.rs  tests.rs  validate.rs
crates/rat-core/: Cargo.toml
crates/rat-core/src/: hub.rs  lib.rs  logger.rs  protocol_engine.rs  runtime.rs  transport.rs
crates/rat-core/src/runtime/: control.rs  control_message.rs  schema_assembly.rs  tests.rs  unknown_monitor.rs
crates/rat-engine/: Cargo.toml
crates/rat-engine/src/: lib.rs
crates/rat-logger/: Cargo.toml
crates/rat-logger/src/: lib.rs
crates/rat-protocol/: Cargo.toml
crates/rat-protocol/src/: c_types.rs  context.rs  lib.rs  types.rs  wire.rs
crates/rat-sync/: Cargo.toml
crates/rat-sync/src/: assembler.rs  ast.rs  discover.rs  fs_adapter.rs  generated.rs  header.rs  ids.rs  layout.rs  lib.rs  model.rs  parser.rs  parser_runner.rs  pipeline.rs  scanner.rs  schema.rs  tests.rs
crates/rat-transport/: Cargo.toml
crates/rat-transport/src/: lib.rs
crates/ratd/: Cargo.toml
crates/ratd/src/: cli.rs  command_loop.rs  config_io.rs  console.rs  daemon.rs  main.rs  output_manager.rs  runtime_lifecycle.rs  runtime_schema.rs  runtime_spec.rs  source_scan.rs  source_state.rs
crates/ratd/src/daemon/: tests.rs
crates/ratd/src/output_manager/: tests.rs
crates/ratsync/: Cargo.toml
crates/ratsync/src/: main.rs
crates/rttd/: Cargo.toml
crates/rttd/src/: backend.rs  cli.rs  console.rs  daemon.rs  main.rs  output_manager.rs  runtime_spec.rs  source_scan.rs  sync_controller.rs  sync_executor.rs
docs/: README.md  config-files.md  philosophy.md  quickstart.md  rat-annotation-spec.md  refactor-plan.md  roadmap.md  workflow.md
docs/migrations/: 0.2.0-breaking.md
examples/mock/: .rttdignore  mock_packets.h  rat.toml  rat_gen.h  rat_gen.toml
firmware/: CMakeLists.txt  README.md
firmware/example/stm32f4_rtt/: CMakeLists.txt  stm32f4_rtt.ioc
firmware/example/stm32f4_rtt/Core/Src/: main.c
firmware/inc/: rat.h  rat_types.h
firmware/src/: rat_cobs.c  rat_core.c  rat_internal.h  rat_rtt.c
pkg/bridge/foxglove/: config.go  messages.go  server.go  server_test.go
pkg/config/: c_ast_parser_nocgo.go  c_ast_parser_treesitter.go  ratitude.go  sync.go
pkg/engine/: hub.go
pkg/logger/: jsonl.go
pkg/protocol/: cobs.go  dynamic_decoder.go  registry.go  types.go
pkg/transport/: tcp.go
tests/bridge/: foxglove_server_test.go  foxglove_test.go
tests/config/: ratitude_test.go
tests/engine/: hub_test.go
tests/logger/: jsonl_test.go
tests/protocol/: cobs_test.go  dynamic_decoder_test.go  registry_test.go
tests/rat/: CMakeLists.txt  test_rat.c
tests/transport/: tcp_test.go
tools/: diagnose_rtt.ps1  jlink_rtt_server.ps1  jlink_rtt_server.sh  openocd_rtt_autogen.cfg  openocd_rtt_mock.py  openocd_rtt_server.ps1  rat-gen.go  rat_gen_test.go  rat_rtt_poll.py  run_mock_foxglove.ps1  run_mock_foxglove.sh  test_cgo.ps1
