[package]
name = "rat-bridge-foxglove"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
base64.workspace = true
foxglove.workspace = true
hex.workspace = true
rat-core = { path = "../rat-core" }
rat-protocol = { path = "../rat-protocol" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
time.workspace = true
tokio-util.workspace = true
tracing.workspace = true
