[package]
name = "rat-bridge-foxglove"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
foxglove.workspace = true
rat-config = { path = "../rat-config" }
rat-core = { path = "../rat-core" }
rat-protocol = { path = "../rat-protocol" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
