[package]
name = "rat-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes.workspace = true
cobs.workspace = true
futures-util.workspace = true
hex.workspace = true
rat-protocol = { path = "../rat-protocol" }
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
thiserror.workspace = true
toml.workspace = true
