[package]
name = "rat-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
rat-config = { path = "../rat-config" }
rat-protocol = { path = "../rat-protocol" }
regex.workspace = true
thiserror.workspace = true
tree-sitter.workspace = true
tree-sitter-c.workspace = true
walkdir.workspace = true
toml.workspace = true
glob = "0.3"
