[package]
name = "rttd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
clap.workspace = true
rat-bridge-foxglove = { path = "../rat-bridge-foxglove" }
rat-config = { path = "../rat-config" }
rat-core = { path = "../rat-core" }
rat-sync = { path = "../rat-sync" }
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
humantime.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
